# runner_project

./: .env  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
static/css/: styles.css
static/js/: scripts.js
templates/: index.html
